--- a/resources/assets/sass/common/index.scss
+++ b/resources/assets/sass/common/index.scss
@@ -2,7 +2,7 @@
 	background-color: $grey;
 }
 /* navbar home */
-#nav-bar {
+.nav-bar {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -25,6 +25,9 @@
 		.nav-logo {
 			font-size: 30px;
 			line-height: 50px;
+			span.nav-logo::before {
+				color: #5520B2;
+			}
 		}
 		.nav-collapse {
 			float: right;
@@ -65,6 +68,9 @@
 	line-height: 45px;
 	padding-left: 1rem;
     padding-right: 1rem;
+	border-top-style: solid;
+	border-top-width: 1px;
+	border-top-color: rgba(33, 2, 43, 0.1);
 
 	.nav-wrapper {
 		height: 50px;
@@ -197,6 +203,7 @@
 
 /** error **/
 .input-field span.error,
+.input-field p.error,
 .select-box span.error, 
 .terms-box ~ span.error {
 	font-size: 10px;
@@ -242,11 +249,27 @@
 }
 
 @media (min-width: 992px) {
-	#nav-bar {
+
+	.nav-bar {
 		padding-left: 5rem;
 		padding-right: 3rem;
+		height: 90px;
+		background-color: transparent;
+		-webkit-transition: background-color 200ms linear;
+		-ms-transition: background-color 200ms linear;
+		-o-transition: background-color 200ms linear;
+		transition: background-color 200ms linear;
+
+		.nav-top {
+			height: 90px;
+			background-color: transparent;
+		}
 		.nav-top .nav-logo {
-			font-size: 40px;
+			font-size: 90px;
+			line-height: 120px;
+			span.da_logo_da::before{
+				color: $white;
+			}
 		}
 		.nav-top .nav-barra, 
 		.nav-top .nav-perfil{
@@ -254,13 +277,13 @@
 		}
 		.nav-top .nav-lineal {
 			display: block;
-			line-height: 50px;
+			line-height: 72px;
 
 			li.nav-lineal-opt {
 				padding: 0 10px;
 				a.nav-lineal-link,
 				a.login {
-					color: $violet;
+					color: $white;
 					padding: 0 30px;
 				}
 				a.login span.nav-lineal-icon-login {
@@ -285,6 +308,31 @@
 					color: $white;
 				}
 				a {color: $white;}
+			}
+		}
+	}
+	.nav-bar.scrolled {
+		background-color: #fff !important;
+		-webkit-transition: background-color 200ms linear;
+		-ms-transition: background-color 200ms linear;
+		-o-transition: background-color 200ms linear;
+		transition: background-color 200ms linear;
+		height: 70px;
+		.nav-top {
+			height: 70px;
+			.nav-logo {
+				font-size: 60px;
+				line-height: 75px;
+				span.da_logo_da::before {
+					color: #5520B2;
+				}
+			}
+		}
+		.nav-top .nav-lineal {
+			li.nav-lineal-opt {
+				a.nav-lineal-link, a.login {
+					color: $violet;
+				}
 			}
 		}
 	}
