--- a/resources/assets/sass/layout/index.scss
+++ b/resources/assets/sass/layout/index.scss
@@ -163,6 +163,9 @@
 
 
 @media (min-width: 992px){
+	#reconocimiento, #beneficio, #nosotros, #medicion {
+		margin-top: 70px;
+	}
 	.layout-text {
 		font-size: 16px;
 		line-height: 20px;
