add dropdown login responsive ver.

--- a/resources/assets/sass/common/colors.scss
+++ b/resources/assets/sass/common/colors.scss
@@ -10,9 +10,9 @@
 
 /*** Colors Dá **/
 
-$violet: #27073A;
+$purple: #27073A;
 $cyan: #51F6FF;
 $orange: #FF5D00;
-$violet-light: #5520B2;
+$purple-light: #5520B2;
 $grey: #F0F0F0;
 $white: #FFFFFF;
