--- a/resources/assets/sass/layout/forms.scss
+++ b/resources/assets/sass/layout/forms.scss
@@ -15,8 +15,8 @@
 	.terms-box {
 		margin-top: 2rem;
 		input[type=checkbox]:checked+label:before {
-			border-right: 2px solid $violet;
-			border-bottom: 2px solid $violet;
+			border-right: 2px solid $purple;
+			border-bottom: 2px solid $purple;
 		}
 	}
 
