--- a/resources/assets/sass/layout/index.scss
+++ b/resources/assets/sass/layout/index.scss
@@ -12,14 +12,14 @@
 .wrapper-general-text {
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-	color: $violet;
+	color: $purple;
 }
 
 .layout-text {
 	font-size: 14px;
 	margin-bottom: 15px;
 	margin-top: 15px;
-	color: $violet;
+	color: $purple;
 }
 
 .layout-box {
@@ -42,7 +42,7 @@
 
 .circle-option {
 	border-radius: 50%;
-	border: 2px solid $violet;
+	border: 2px solid $purple;
 	width: 40px;
 	height: 40px;
 	display: flex;
@@ -52,7 +52,7 @@
     margin: 0 auto;
     font-size: 18px;
     font-weight: bold;
-    color: $violet;
+    color: $purple;
 }
 
 /** Beneficios **/
@@ -148,7 +148,7 @@
 	.about-perfil-text {
 		margin-top: 2rem;
 		margin-bottom: 2rem;
-		color: $violet;
+		color: $purple;
 		p:first-of-type{
 			font-weight: bold;
 		}
