fix style buttons and menu links

--- a/resources/assets/sass/common/colors.scss
+++ b/resources/assets/sass/common/colors.scss
@@ -11,8 +11,15 @@
 /*** Colors Dá **/
 
 $purple: #27073A;
+$purple2: #38074f;
+
 $cyan: #51F6FF;
+$cyan2: #4ee0e8;
+
 $orange: #FF5D00;
+$orange2: #ff6c1d;
+
 $purple-light: #5520B2;
+$purple-light2: #5520c1;
 $grey: #F0F0F0;
 $white: #FFFFFF;
