--- a/resources/assets/sass/layout/index.scss
+++ b/resources/assets/sass/layout/index.scss
@@ -19,7 +19,6 @@
 	font-size: 14px;
 	margin-bottom: 15px;
 	margin-top: 15px;
-	color: $purple;
 }
 
 .layout-box {
@@ -42,7 +41,7 @@
 
 .circle-option {
 	border-radius: 50%;
-	border: 2px solid $purple;
+	border: 2px solid $white;
 	width: 40px;
 	height: 40px;
 	display: flex;
@@ -52,7 +51,7 @@
     margin: 0 auto;
     font-size: 18px;
     font-weight: bold;
-    color: $purple;
+    color: $white;
 }
 
 /** Beneficios **/
@@ -160,7 +159,13 @@
 	margin-bottom: 10px;
 	margin-top: 10px;
 }
-
+.bg-beneficio-options {
+	background-image: url('../assets/img/responsive/img_categorias_responsive.jpg');
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+	color: $white;
+}
 
 @media (min-width: 992px){
 	#reconocimiento, #beneficio, #nosotros, #medicion {
@@ -183,6 +188,9 @@
 
 	.bg-beneficio {
 		background-image: url('../assets/img/img_beneficios.jpg');
+	}
+	.bg-beneficio-options {
+		background-image: url('../assets/img/img_categorias.jpg');
 	}
 	.bg-medicion {
 		background-image: url('../assets/img/img_medicion.jpg');
