--- a/resources/assets/sass/home/general.scss
+++ b/resources/assets/sass/home/general.scss
@@ -84,6 +84,11 @@ a {
 		width: 100%;
 		height: 600px;
 		background-color: $white;
+		.btn-da-box {
+			#cotiza-home-btn{
+				margin-top: 30px;
+			}
+		}
 	}
 }
 
@@ -140,41 +145,6 @@ a {
 
 }
 
-.form-common {
-	.input-field input {
-		margin-bottom: 5px;
-	}
-	.input-field label {
-		font-size: 12px;
-		opacity: 0.6;
-		color: $purple;
-	}
-	.input-field input[type=number]:focus + label,
-	.input-field input[type=text]:focus + label,
-	.input-field input[type=email]:focus + label,
-	textarea.materialize-textarea:focus + label {
-		color: $purple;
-	}
-
-    .input-field input[type=text]:focus,
-    .input-field input[type=text].valid,
-    .input-field input[type=text]:focus.valid,
-    .input-field input[type=number]:focus,
-    .input-field input[type=number].valid,
-    .input-field input[type=number]:focus.valid,
-    .input-field input[type=email]:focus,
-    .input-field input[type=email].valid,
-    .input-field input[type=email]:focus.valid,
-    textarea.materialize-textarea:focus,
-    textarea.materialize-textarea.valid {
-    	border-bottom: 1px solid $purple;
-    	box-shadow: 0 1px 0 0 $purple;
-	}
-	textarea.materialize-textarea {
-		padding: 0;
-	}
-}
-
 .docs-wrapper {
 	background-color: $white;
 	border-bottom-left-radius: 10px;
@@ -229,12 +199,13 @@ a {
 			font-weight: bold;
 			margin-bottom: 10px;
 			margin-top: 30px;
+			margin-left: 30px;
 
 			span:nth-child(1){
 				position: absolute;
 				top: 50px;
-				left: 48%;
-				margin-left: -90px;
+				left: 50%;
+				margin-left: -84px;
 				font-size: 30px;
 			}
 
@@ -328,6 +299,11 @@ a {
 		
 		.cotiza-wrapper {
 			width: 50%;
+			.btn-da-box {
+				a {
+					margin-left: 0px;
+				}
+			}
 			
 		}
 	}
