--- a/resources/assets/sass/layout/forms.scss
+++ b/resources/assets/sass/layout/forms.scss
@@ -26,23 +26,58 @@
 		text-align: left;
 	}
 	.caret {
-		color: #5d5b5b;
+		color: $purple;
 		width: 20px;
 	}
 	.select-afiliate {
 		background-color: transparent;
 		width: 100%;
-		padding: 5px;
+		padding: 0px;
 		border: none;
 		border-radius: 2px;
 		height: 3rem;
-		border-bottom: 1px solid #9e9e9e;
+		border-bottom: 1px solid $purple;
 	}
 	.input.field select:focus {
 		border: none;
 	}
 }
+.form-common {
+	.input-field input {
+		margin-bottom: 5px;
+		border-bottom: 1px solid $purple;
+	}
+	.input-field label {
+		font-size: 12px;
+		opacity: 0.6;
+		color: $purple;
+	}
+	.input-field input[type=number]:focus + label,
+	.input-field input[type=text]:focus + label,
+	.input-field input[type=email]:focus + label,
+	textarea.materialize-textarea:focus + label {
+		color: $purple;
+	}
 
+    .input-field input[type=text]:focus,
+    .input-field input[type=text].valid,
+    .input-field input[type=text]:focus.valid,
+    .input-field input[type=number]:focus,
+    .input-field input[type=number].valid,
+    .input-field input[type=number]:focus.valid,
+    .input-field input[type=email]:focus,
+    .input-field input[type=email].valid,
+    .input-field input[type=email]:focus.valid,
+    textarea.materialize-textarea:focus,
+    textarea.materialize-textarea.valid {
+    	border-bottom: 1px solid $purple;
+    	box-shadow: 0 1px 0 0 $purple;
+	}
+	textarea.materialize-textarea {
+		padding: 0;
+		border-bottom: 1px solid $purple;
+	}
+}
 @media (min-width: 992px) {
 	#afiliacion, #contacto {
 		margin-top: 70px;
