--- a/resources/assets/sass/public.scss
+++ b/resources/assets/sass/public.scss
@@ -6,9 +6,9 @@
 
 /************************/
 
-@import "common/colors";
-@import "common/index";
+@import "partials/colors";
+@import "partials/index";
 
 @import "home/general";
-@import "layout/index";
-@import "layout/forms";
+@import "pages/index";
+@import "pages/forms";
