--- a/resources/assets/sass/public.scss
+++ b/resources/assets/sass/public.scss
@@ -6,9 +6,9 @@
 
 /************************/
 
-@import "partials/colors";
+@import "partials/varios";
+@import "partials/forms";
 @import "partials/index";
 
 @import "home/general";
 @import "pages/index";
-@import "pages/forms";
