add form response view contact-form

--- a/resources/assets/sass/partials/index.scss
+++ b/resources/assets/sass/partials/index.scss
@@ -5,6 +5,9 @@
 	background-color: $purple-light;
 	color: $white;
 }
+.bg-white {
+	background-color: $white;
+}
 /* navbar home */
 .nav-bar {
 	position: fixed;
