--- a/resources/assets/sass/partials/index.scss
+++ b/resources/assets/sass/partials/index.scss
@@ -172,10 +172,9 @@
 
 /** botones **/
 
-.btn-da-box {
+.btn-da-wrapper {
     margin-top: 10px;
-    margin-bottom: 10px;
-    justify-content: center;
+    margin-bottom: 15px;
 }
 .btn-da{
 	display: block;
