--- a/resources/assets/sass/pages/index.scss
+++ b/resources/assets/sass/pages/index.scss
@@ -7,7 +7,7 @@
 /************/
 .wrapper-general {
 	padding-bottom: 3rem;
-	padding-top: 2rem;
+	padding-top: 3rem;
 }
 .wrapper-general-text {
 	padding-top: 2rem;
@@ -62,45 +62,39 @@
 	width: 100%;
 }
 
-.benef-slider {
+.slider-wrapper {
+	display: block;
+}
+
+.slider-option{
 	padding-top: 2rem;
 	padding-bottom: 2rem;
-
-	.benef-slider-title{
-		font-weight: bold;
-		font-size: 25px;
-		padding-top: 1rem;
-	}
+	margin: auto;
+	width: 290px;
 
 	.bx-wrapper{
 		margin-bottom: 0px;
 		.bx-next {
-			right: 5px;
+			right: 0px;
 		}
 		.bx-prev {
-			left: 5px;
+			left: 0px;
 		}
 	}
-	.benef-slider-bottom {
-		padding-top: 2rem;
-		padding-bottom: 2rem;
+	.slider-img-wrap {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		height: 150px;
 
-		.benef-slider-box {
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			height: 150px;
-
-			.benef-slider-options {
-				width: 90px;
-				height: 90px;
-				border-radius: 50%;
-				margin-left: 10px;
-				margin-right: 10px;
-			}
+		.slider-img {
+			width: 90px;
+			height: 90px;
+			border-radius: 50%;
+			margin-left: 10px;
+			margin-right: 10px;
 		}
-	}
-	
+	}	
 }
 
 /** medicion **/ 
@@ -204,7 +198,6 @@
 		background-image: url('../assets/img/img_trabaja.jpg');
 		background-position: 70% 100%;
 	}
-
 	.bg-layout-wrap {
 		width: 50%;
 		height: 550px;
@@ -215,6 +208,23 @@
 	.about-wrapper {
 		padding-top: 5rem;
 		text-align: left;
+	}
+	.slider-wrapper {
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
+		display: flex;
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		-ms-flex-align: center;
+		align-items: center;
+		-ms-flex-pack: center;
+		justify-content: center;
+	}
+	.slider-option {
+		width: 270px; 
+		margin-right: 30px; 
+		margin-left: 30px;
 	}
 
 }
